# timdimm_tng

./: .gitignore  CLAUDE.md  Dockerfile  README.md  hdimm_schedule.esl  kstars_docker  pyproject.toml  setup.cfg  star.lst  timdimm_env.yml  timdimm_schedule.esl  timdimm_sim_test_schedule.esl  tox.ini
config/: README.md  timdimm.conf  timdimm.service
kstars/: README.md  kstarsrc
notebooks/: asi432mm_qe.csv  catalog.ipynb  dbus.ipynb  dbus_dev.ipynb  dimm_dev.ipynb  ekos_dev.ipynb  fass_dev.ipynb  hdimm_dev.ipynb  sdbus_dev.ipynb  wx.ipynb
scripts/: daily_cleanup  ekos  grab_ser_movie  ox_wagon_door_status.py  sim_properties.txt  start_ekos  start_kstars
scripts/ekos_hdimm/: abort.py  close.py  connect.py  disconnect.py  goto.py  move_ccw.py  move_cw.py  open.py  park.py  postcapture.py  postjob.py  precapture.py  prejob.py  shutdown.py  startup.py  status.py  unpark.py
scripts/ekos_sim/: abort.py  close.py  connect.py  disconnect.py  move_ccw.py  move_cw.py  open.py  park.py  postcapture.py  postjob.py  precapture.py  prejob.py  shutdown.py  startup.py  status.py  unpark.py  weather_status.py
scripts/ekos_timdimm/: abort.py  close.py  connect.py  disconnect.py  goto.py  move_ccw.py  move_cw.py  open.py  park.py  postcapture.py  postjob.py  precapture.py  prejob.py  shutdown.py  startup.py  status.py  unpark.py
src/timdimm_tng/: analyze_cube.py  indi.py  locations.py  ox_wagon.py  scheduler.py  ser.py  timdimm_gui.py  timdimm_startstop.py  vid_capture.py  webgui.py
src/timdimm_tng/data/: star.lst  star_list.ecsv  star_list_full.ecsv
src/timdimm_tng/dbus/: align.py  capture.py  dome.py  ekos.py  indi.py  mount.py  scheduler.py
src/timdimm_tng/templates/: hdimm_schedule_template.esl  hdimm_sequence.esq  timdimm_schedule_template.esl  timdimm_sequence.esq  timdimm_sequence_sim.esq
src/timdimm_tng/wx/: check_wx.py  gfz_weather.py  lcogt_bwc2_weather.py  lcogt_weather.py  monet_weather.py  saao_io.py  salt_weather_xml.py  utils.py
