[metadata]
name = timdimm_tng
author = T. E. Pickering
author_email = te.pickering@gmail.com
description = Utilities for the SAAO timDIMM and MMTO portable seeing monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMTObservatory/timdimm_tng
project_urls =
    Bug Tracker = https://github.com/MMTObservatory/timdimm_tng/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pyserial
    astroplan
    astropy
    pandas
    scipy
    photutils
    matplotlib
    xmltodict
    ipykernel
    ipympl
    scikit-image
    xmltodict
    beautifulsoup4

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest-astropy
    notebook
    ipympl
sdbus =
    sdbus

[options.entry_points]
console_scripts =
    vid_capture = timdimm_tng.vid_capture:main
    timdimm_analyze = timdimm_tng.analyze_cube:timdimm_analyze
    hdimm_analyze = timdimm_tng.analyze_cube:hdimm_analyze
    oxwagon = timdimm_tng.ox_wagon:main
    gfz_wx = timdimm_tng.wx.gfz_weather:main
    salt_wx = timdimm_tng.wx.salt_weather_xml:main
    lco_wx = timdimm_tng.wx.lcogt_weather:main
    lco_boltwood_wx = timdimm_tng.wx.lcogt_bwc2_weather:main
    monet_wx = timdimm_tng.wx.monet_weather:main
    saao_io = timdimm_tng.wx.saao_io:main
    check_wx = timdimm_tng.wx.check_wx:main
    timdimm = timdimm_tng.timdimm_gui:main

[tox:tox]
envlist = codestyle

[testenv:codestyle]
deps =
    flake8
skip_install = true
changedir = src
description = check code style with flake8
commands = flake8 timdimm_tng --count --max-line-length=132
